--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <iframe src="https://www.prepbytes.com/"></iframe>
     <br>
     <iframe src="http://127.0.0.1:5500/file.html" ></iframe>
-
+<br>
+    
+    <img src="screenshot (69).png>
 </body>
 </html>
