--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     <iframe src="http://127.0.0.1:5500/file.html" ></iframe>
 <br>
     
-    <img src="screenshot (69).png>
+     <img src="Screenshot (69).png" width="100">
 </body>
 </html>
